# libdsps

./: .gitignore  LICENSE  README.md  pyproject.toml
src/libdsps/: grids.py  shapes.py
