[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libdsps"
version = "0.2.0"
authors = [{ name = "Didas72" }]
description = "My personal set of utility function for building models with SolidPython2"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [ "solidpython2" ]

[project.urls]
Homepage = "https://github.com/didas72/libdsps"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	# Conflicting
	"D203",
	"D212",
	"COM812",

	# Allow 'TODO' and 'HACK' in code
	"FIX002",
	"TD002",
	"TD003",
	"FIX004",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
